Piece heirarchy. Movable pieces.
Instead of enumerating piece types I decided to create a heirarchy.
There's now a rudimentary piece moving system in place. There's a visual
glitch with selecting boardlocations but I'm fairly sure I know exactly
what's wrong.

Instead of defining the togglebutton control template in a style the
template is defined as it's own key. The datatemplate of boardlocation is
now defined in ChessBoardView.xaml.

--- a/Chess/Chess.csproj
+++ b/Chess/Chess.csproj
@@ -63,6 +63,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Models\Bishop.cs" />
+    <Compile Include="Models\King.cs" />
+    <Compile Include="Models\Knight.cs" />
+    <Compile Include="Models\Pawn.cs" />
+    <Compile Include="Models\Queen.cs" />
+    <Compile Include="Models\Rook.cs" />
     <Compile Include="ViewModels\ChessBoardViewModel.cs" />
     <Compile Include="Views\ChessBoardView.xaml.cs">
       <DependentUpon>ChessBoardView.xaml</DependentUpon>
