Started writing tests for chessboard
Started writing tests for chessboard. So far these tests only cover moving pieces.

Also, the custom dictionary works now. Had to change a build setting for the xml file.

--- a/Chess/Chess.csproj
+++ b/Chess/Chess.csproj
@@ -123,7 +123,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="CustomDictionary.xml" />
+    <CodeAnalysisDictionary Include="CustomDictionary.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
